extends Control

@onready var log_display_page = $log_page

var max_entries = 1000
var entry_index = 0

func _on_filter_combat_bt_pressed():
	pass # Replace with function body.


func _on_show_all_bt_pressed():
	pass # Replace with function body.


func _on_filter_events_bt_pressed():
	pass # Replace with function body.
